# quantise-llms

./: .gitignore  README.md  pyproject.toml
scripts/: sync_deps.sh  sync_deps_system.sh
src/: deepseek_r1_distill_qwenn_14B_4_bit.py  quantise_ds_14b.py  test_model.py
