[project]
name = "test-pretrained-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "gptqmodel@git+https://github.com/ModelCloud/GPTQModel.git@v3.0.0",
    "numpy>=2.2.5",
    "torch>=2.7.0",
    "transformers[torch]>=4.51.3",
]

[dependency-groups]
gptqmodel-deps = [
    "accelerate>=1.3.0",
    "datasets>=3.2.0",
    "numpy>=1.26.4",
    "torch>=2.2.0",
    "safetensors>=0.5.2",
    "transformers>=4.49.0",
    "threadpoolctl>=3.6.0",
    "packaging>=24.2",
    "device-smi==0.4.1",
    "protobuf>=5.29.3",
    "pillow>=11.1.0",
    "hf_transfer>=0.1.9",
    "huggingface_hub>=0.28.1",
    "random_word==1.0.13",
    "tokenicer==0.0.4",
    "logbar==0.0.4",
]



# This emulates --no-build-isolation
[tool.uv]
no-build-isolation-package = ["gptqmodel"]
default-groups = "all"
